--- a/Electronic Library/Electronic Library/Electronic Library.vcxproj
+++ b/Electronic Library/Electronic Library/Electronic Library.vcxproj
@@ -142,12 +142,14 @@
     <ClInclude Include="Book.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Helper.h" />
+    <ClInclude Include="ISBN.h" />
     <ClInclude Include="Library.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Book.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Helper.cpp" />
+    <ClCompile Include="ISBN.cpp" />
     <ClCompile Include="Library.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
