--- a/Electronic Library/Electronic Library/Electronic Library.vcxproj.filters
+++ b/Electronic Library/Electronic Library/Electronic Library.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Helper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ISBN.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Book.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Helper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ISBN.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
